--- a/src/app/styles/theme/_dark.scss
+++ b/src/app/styles/theme/_dark.scss
@@ -45,6 +45,10 @@
     --submit-button-shadow-active: inset 0 -1px 1px rgba(0 0 0 / 10%), inset 0 1px 2px rgb(0 0 0 / 30%), inset 0 0 0 60px rgb(255 255 0 / 45%);
     --submit-button-border-active: rgba(177 159 10%);
     
+    // * BUTTON SUBSCRIBE
+    --subscribe-button-focus: #5fc6f2;
+    --subscribe-button-active: #185a77;
+    
     // * BACKROUND COLOR
     --bg-color: #383939;
     --inverted-bg-color: #efe6e6;
