--- a/src/shared/ui/InputForm/ui/InputForm.module.scss
+++ b/src/shared/ui/InputForm/ui/InputForm.module.scss
@@ -1,3 +1,5 @@
+@import 'scss-variables';
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -5,13 +7,13 @@
 
 .label {
     font: var(--font-m);
-    font-weight: 400;
     line-height: 138%;
     color: var(--p-color);
     letter-spacing: 0.48px;
 }
 
 .inputForm {
+    width: 100%;
     height: 100%;
     border: 1px solid var(--inverted-bg-color);
 
@@ -35,31 +37,44 @@
 
 
 .size_m {
-    width: 290px;
+    width: 100%;
     height: 50px;
 
-    @media screen and ( width <= 992px ) {
-        min-width: 100%;
+    @media #{$tablets} { 
         height: 40px;
     }
     
-    @media screen and ( width <= 768px ) {
+    @media #{$mobile-devices-portrait} {
         max-width: 70%;
     }
     
-    @media (orientation: landscape) and ( width <= 768px ) {
+    @media #{$mobile-devices-landscape} {
         max-width: 80%;
     }
 
       
-    @media screen and ( width <= 576px ) {
+    @media #{$small-mobile-devices-portrait} {
         max-width: 90%;
     }
 }
 
 .size_l {
     width: 640px;
-    height: 62px;
+    height: 82px;
+
+    @media #{$large-displays} {
+        max-width: 50%;
+        height: 70px;
+    }
+
+    @media #{$tablets} {
+        height: 60px;
+    }
+
+    @media #{$small-mobile-devices-portrait} {
+        max-width: 100%;
+        height: 40px;
+    }
 }
 
 :global {
