--- a/src/widgets/ui/Header/ui/NavBar/ui/NavBar.module.scss
+++ b/src/widgets/ui/Header/ui/NavBar/ui/NavBar.module.scss
@@ -1,5 +1,7 @@
+@import 'scss-variables';
+
 .navBar {
-    @media screen and ( width <= 992px ) {
+    @media #{$tablets} {
         display: none;
     }
 }
@@ -16,23 +18,25 @@
     margin: 0;
     padding: 0;
 
+    font: var(--font-m-lato);
     color: unset;
     list-style: none;
 
     transition: color .3s;
 
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
+
     a {
         color: inherit;
+        text-transform: uppercase;
     }  
+
+    @media #{$laptops} {
+        font: var(--font-s-lato);
+    }
 }
-
-// .item:not(:last-child) {
-//     margin-right: 2.5rem;
-
-//     @media screen and ( width <= 1200px ) {
-//         margin-right: 1.5rem;
-//     }
-// }
 
 .hover {
     color: var(--accent-color);
