fixed the problems storybook with alias started developing side-bar

--- a/src/app/styles/theme/_dark.scss
+++ b/src/app/styles/theme/_dark.scss
@@ -62,4 +62,5 @@
     // * HOVER
     --primary-hover: #aee3fa;
     --secondary-hover: #2b2b2b;
+    --ant-card-hoverable: 0 1px 2px -2px rgb(219 219 219 / 16%),0 3px 6px 0 rgb(206 206 206 / 12%),0 5px 12px 4px rgb(176 176 176 / 9%);
 }
