--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -55,6 +55,9 @@
     // * HEADER HEIGHT
     --header-height: 4.5rem;
 
+    // * SIDE-BAR WIDTH
+    --side-bar-width: 30%;
+
     // * Z-INDEX
     --header-z-index: 2;
     --modal-z-index: 5;
