--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -17,16 +17,12 @@ body {
 }
 
 .app {
+    position: relative;
     min-height: 100vh;
 }
 
 .page-content {
     display: flex;
-    min-height: 100vh;
-}
-
-.page-wrapper {
-    min-height: 100%;
     padding: calc(var(--header-height) + 1rem) 0 0 0;
 }
 
