--- a/src/app/styles/theme/_light.scss
+++ b/src/app/styles/theme/_light.scss
@@ -62,4 +62,5 @@
     // * HOVER
     --primary-hover: #aee3fa;
     --secondary-hover: #28282a;
+    --ant-card-hoverable: 0 1px 2px -2px rgb(0 0 0 / 16%),0 3px 6px 0 rgb(0 0 0 / 12%),0 5px 12px 4px rgb(0 0 0 / 9%);
 }
