--- a/src/widgets/ui/Header/ui/Header.module.scss
+++ b/src/widgets/ui/Header/ui/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
     position: fixed;
-    z-index: var(--header-z-index);
+    z-index: var(--z-index-header);
     top: 0;
     bottom: 0;
     left: 0;
