--- a/src/widgets/ui/SwitcherTheme/ui/SwitcherTheme.module.scss
+++ b/src/widgets/ui/SwitcherTheme/ui/SwitcherTheme.module.scss
@@ -3,9 +3,9 @@
     align-items: center;
 }
 
-.svg {
-    width: 30px;
-    height: 30px;
-    color: var(--primary-color);
-    transition: all .3s;
-}
+// .svg {
+//     width: 30px;
+//     height: 30px;
+//     color: var(--primary-color);
+//     transition: all var(--delay-transition);
+// }
