--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -59,8 +59,9 @@
     --side-bar-width: 30%;
 
     // * Z-INDEX
-    --header-z-index: 2;
-    --modal-z-index: 5;
+    --z-index-sidebar: 1;
+    --z-index-header: 2;
+    --z-index-modal: 5;
 
     // * OVERLAY COLOR
     /* stylelint-disable-next-line */
@@ -89,11 +90,13 @@
         --font-size-xl-jost: 3rem;
         --font-size-m-jost: .9rem;
         --header-height: 3rem;
+        --side-bar-width: 50%;
     }
     
     @media #{$small-mobile-devices-portrait} {
         --font-size-l-jost: 1.5rem;
         --font-size-xl-jost: 2.5rem;
         --font-size-m-jost: .8rem;
+        --side-bar-width: 80%;
     }
 }
