--- a/src/widgets/ui/Header/ui/Header.module.scss
+++ b/src/widgets/ui/Header/ui/Header.module.scss
@@ -1,6 +1,8 @@
+@import 'scss-variables';
+
 .header {
     position: fixed;
-    z-index: var(--header-z-index);
+    z-index: var(--z-index-header);
     top: 0;
     bottom: 0;
     left: 0;
@@ -102,6 +104,12 @@
 
     svg {
         fill: #fff;
+    }
+}
+
+.center {
+    @media #{$tablets} {
+        display: none;
     }
 }
 
