made the Tekt component checked the inputs for the number of characters

--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -67,6 +67,9 @@
     /* stylelint-disable-next-line */
     --overlay-color: rgba(0, 0, 0, 0.9);
 
+    // * COLOR
+    --error-color: red;
+
     // * TIME
     --delay-transition: .3s;
     --delay-animation: .5s;
