--- a/src/shared/ui/CustomButton/ui/CustomButton.module.scss
+++ b/src/shared/ui/CustomButton/ui/CustomButton.module.scss
@@ -163,6 +163,7 @@ button {
 .submit {
     display: inline-block;
 
+    min-width: 100%;
     padding: .25em .5em;
 
     font-weight: 700;
@@ -225,6 +226,11 @@ button {
     @media #{$mobile-devices-portrait} {
         padding: 10px 8px;
     }
+}
+
+.register {
+    color: var(--inverted-primary-color);
+    background: var(--inverted-bg-color);
 }
 
 .disabled {
