--- a/src/shared/ui/CustomTitle/ui/CustomTitle.module.scss
+++ b/src/shared/ui/CustomTitle/ui/CustomTitle.module.scss
@@ -19,7 +19,17 @@ h3.customTitle.h3 {
     text-transform: uppercase;
 }
 
+h1.h1.primary ,
+h2.h2.primary ,
+h3.h3.primary {
+    margin-bottom: 5px;
+}
+
 :global {
+    h1.css-dev-only-do-not-override-fpg3f5.ant-typography, div.css-dev-only-do-not-override-fpg3f5.ant-typography-h1, div.css-dev-only-do-not-override-fpg3f5.ant-typography-h1>textarea, .css-dev-only-do-not-override-fpg3f5.ant-typography h1 {
+        margin-bottom: 0;
+    }
+
     .ant-typography {
         color: var(--primary-color);
     }
