wrote tests for the Sidebar Counter components and the getUserAuthData selector

--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -56,7 +56,8 @@
     --header-height: 4.5rem;
 
     // * SIDE-BAR WIDTH
-    --side-bar-width: 30%;
+    --side-bar-width: 50%;
+    --side-bar-landscape-width: 30%;
 
     // * Z-INDEX
     --z-index-sidebar: 1;
