--- a/src/widgets/ui/SideBar/ui/SideBar.module.scss
+++ b/src/widgets/ui/SideBar/ui/SideBar.module.scss
@@ -23,6 +23,10 @@
         transform: translateX(0);
     }
 
+    @media #{$tablets-landscape} {
+        width: var(--side-bar-landscape-width);
+    }
+    
     @media #{$tablets} {
         display: block;
     }
