made a storybook for SideBar installed Husky

--- a/src/app/styles/variables/_global.scss
+++ b/src/app/styles/variables/_global.scss
@@ -52,12 +52,13 @@
      /* stylelint-disable-next-line */
     --font-family-Lato: 'Lato', sans-serif;
 
-    // * HEADER HEIGHT
+    // * HEADER
     --header-height: 4.5rem;
 
-    // * SIDE-BAR WIDTH
+    // * SIDE-BAR
     --side-bar-width: 50%;
     --side-bar-landscape-width: 30%;
+    --side-bar-height: 300px;
 
     // * Z-INDEX
     --z-index-sidebar: 1;
